k8s/networking/db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: db-ingress
  namespace: voting-app

spec:
  podSelector:
    matchLabels:
      app: db

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: worker
        - podSelector:
            matchLabels:
              app: result

      ports:
        - port: 5432
