k8s/networking/frontend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: frontend-ingress
  namespace: voting-app

spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - vote
          - result

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx

      ports:
        - port: 80
