k8s/networking/redis-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: redis-ingress
  namespace: voting-app

spec:
  podSelector:
    matchLabels:
      app: redis

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: vote
        - podSelector:
            matchLabels:
              app: worker

      ports:
        - port: 6379
